force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Training Master Service Agreement</fullName>
            </value>
            <value>
                <fullName>Project Assignment Agreement</fullName>
            </value>
            <value>
                <fullName>Project Dissolution Document</fullName>
            </value>
            <value>
                <fullName>Project Governance Document</fullName>
            </value>
            <value>
                <fullName>Project Incorporation Document</fullName>
            </value>
            <value>
                <fullName>Project Management Services Agreement</fullName>
            </value>
            <value>
                <fullName>Project Series Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>