force-app/main/default/objects/ContentVersion/fields/Show_in_Joinnow__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Joinnow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Joinnow</label>
    <type>Checkbox</type>
</CustomField>