force-app/main/default/objects/ContentVersion/validationRules/Require_Doc_Type_with_Related_Record_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Doc_Type_with_Related_Record_ID</fullName>
    <active>true</active>
    <description>Requires the Document Type field to be populated if the Related Record ID is populated, and requires the Related Record ID to be populated if the Document Type field is populated, since these two fields work hand in hand in the trigger for this object.</description>
    <errorConditionFormula>OR(
   AND(
       ISBLANK(Related_Record_ID__c),
       NOT(ISPICKVAL(Document_Type__c, &quot;&quot;))
      ),
   AND(
       NOT(ISBLANK(Related_Record_ID__c)),
       ISPICKVAL(Document_Type__c, &quot;&quot;)
      )
  )</errorConditionFormula>
    <errorMessage>If a Related Record ID is specified, then a Document Type must also be specified (and vice versa).</errorMessage>
</ValidationRule>